deploy/variabele_demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vardemo
  namespace: vardemo
spec:
  type: ClusterIP
  selector:
    app: vardemo
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
