deploy/variabele_demo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vardemo
  namespace: vardemo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    #traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - vardemo.blaataap.com
  rules:
    - host: vardemo.blaataap.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vardemo
                port:
                  number: 80
